changed font sizes

--- a/index.html
+++ b/index.html
@@ -852,24 +852,24 @@
     @media(min-width:320px) and (max-width:767px) {
 
       .hero-name {
-        font-size: 30px;
+        font-size: 40px;
       }
 
-      .hero-title {
-        font-size: 20px;
-      }
+      /* .hero-title {
+        font-size: 25px;
+      } */
 
       .lead-muted {
-        font-size: 14px;
+        font-size: 19px;
       }
 
       .about-card {
         justify-content: center;
       }
 
-      p.lead-muted {
-        font-size: 16px;
-      }
+      /* p.lead-muted {
+        font-size: 19px;
+      } */
 
       .skills-grid {
         grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -921,7 +921,7 @@
         font-size: 75px;
       }
       .lead-muted {
-        font-size: 19px;
+        font-size: 17px;
       }
 
       .about-card {
