improved font for mobile devices

--- a/index.html
+++ b/index.html
@@ -867,9 +867,13 @@
         justify-content: center;
       }
 
-      /* p.lead-muted {
+      p.lead-muted {
         font-size: 19px;
-      } */
+      }
+
+      .timeline-right .desc{
+        font-size: 17px;
+      }
 
       .skills-grid {
         grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -920,6 +924,7 @@
       .hero-name {
         font-size: 75px;
       }
+
       .lead-muted {
         font-size: 17px;
       }
@@ -941,7 +946,6 @@
       color: steelblue;
       font-weight: 700;
     }
-
   </style>
 </head>
 
@@ -1354,7 +1358,8 @@
       <!-- <div class="mb-3" style="color:rgba(255,255,255,0.72)">Connect with me on</div> -->
 
       <div class="contact-links">
-        <a href="https://in.linkedin.com/in/sunil-kumar-p-m-3b493810a" target="_blank" title="LinkedIn"><i class="bi bi-linkedin"></i></a>
+        <a href="https://in.linkedin.com/in/sunil-kumar-p-m-3b493810a" target="_blank" title="LinkedIn"><i
+            class="bi bi-linkedin"></i></a>
         <a href="#" title="GitHub"><i class="bi bi-github"></i></a>
       </div>
     </div>
