font changes for headings

--- a/index.html
+++ b/index.html
@@ -871,6 +871,14 @@
         font-size: 19px;
       }
 
+      .timeline-left .company{
+        font-size: 18px;
+      }
+
+      .timeline-right .role{
+        font-size: 18px;
+      }
+
       .timeline-right .desc{
         font-size: 17px;
       }
