--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
       } */
 
       .lead-muted {
-        font-size: 19px;
+        font-size: 17px;
       }
 
       .about-card {
@@ -868,7 +868,7 @@
       }
 
       p.lead-muted {
-        font-size: 19px;
+        font-size: 18px;
       }
 
       .timeline-left .company{
@@ -881,6 +881,10 @@
 
       .timeline-right .desc{
         font-size: 17px;
+      }
+
+      .timeline-left .period{
+        font-size: 14px;
       }
 
       .skills-grid {
