--- a/index.html
+++ b/index.html
@@ -1372,7 +1372,7 @@
       <div class="contact-links">
         <a href="https://in.linkedin.com/in/sunil-kumar-p-m-3b493810a" target="_blank" title="LinkedIn"><i
             class="bi bi-linkedin"></i></a>
-        <a href="#" title="GitHub"><i class="bi bi-github"></i></a>
+        <a href="https://github.com/SunilPM01" target="_blank" title="GitHub"><i class="bi bi-github"></i></a>
       </div>
     </div>
   </section>
