--- a/index.html
+++ b/index.html
@@ -990,7 +990,7 @@
     <div class="hero-center">
       <div class="hero-panel fade-scale">
         <div class="hero-name">Sunil Kumar P M</div>
-        <div class="hero-title">Technical Lead • Full Stack Developer</div>
+        <div class="hero-title">Technical Lead • Architect</div>
         <div class="mt-3 lead-muted" style="color:#dbefff">I design and deliver high-performance web platforms, lead
           engineering teams and implement secure scalable systems.</div>
       </div>
@@ -1009,7 +1009,7 @@
         <div class="about-pic shadow-sm"><img src="sunil-profile-pic.jpg" alt="Profile">
         </div>
         <div class="about-text">
-          <p class="lead-muted" style="text-align: left;"><b>AI-Powered Full Stack Engineer</b> with an unrelenting
+          <!-- <p class="lead-muted" style="text-align: left;"><b>AI-Powered Full Stack Engineer</b> with an unrelenting
             passion for crafting elegant,
             rich user
             experiences using modern frameworks and Libraries. I thrive on transforming complex problems
@@ -1022,6 +1022,17 @@
             projects, implemented DevOps pipelines and delivered high impact solutions across diverse domains including
             Automotive, Cybersecurity, Semiconductor and Banking.
             When not architecting the next breakthrough or mentoring teams, I cherish deep connections with my family
+            and friends. I step away from social media to meet people face-to-face, enjoying real conversations and
+            building authentic relationships that energize my collaborative approach to innovation.</p> -->
+            <p class="lead-muted" style="text-align: left;">I am a <b>Technical Lead</b> and <b>Architect</b> with over <b>9</b> years of experience building high-stakes software across diverse industries—from Cybersecurity and Scientific Simulations to my most recent 5-year tenure within a Tier-1 Automotive organization.
+
+I thrive at the intersection of complex system architecture and high-performance team leadership. My journey has evolved from mastering deep technical domains to spearheading organizational-wide digital transformations. I specialize in designing high-concurrency distributed systems and integrating enterprise-grade AI frameworks (RAG, LLMs) into mission-critical toolchains.
+I bridge the gap between high-level vision and ground-level execution, working closely with Release Train Architects to build scalable, "future-proof" infrastructures.
+As a recognized "Key Player" and nominated Subject Matter Expert, I pride myself on being a force multiplier—mentoring engineers and fostering a culture of technical excellence.
+Whether it’s architecting sharded database clusters or centralizing AI assistants through Model Context Protocols (MCP), I focus on solving problems that impact thousands of users and cross-functional teams.
+I believe that great software isn't just about clean code; it’s about aligning technical strategy with business goals to build products that are as stable as they are innovative.
+<br>
+When not architecting the next breakthrough or mentoring teams, I cherish deep connections with my family
             and friends. I step away from social media to meet people face-to-face, enjoying real conversations and
             building authentic relationships that energize my collaborative approach to innovation.</p>
           <div class="mt-3">
@@ -1156,9 +1167,9 @@
       <div class="d-flex flex-wrap" style="gap:18px;">
         <div class="do-col">
           <div class="card p-4 fade-scale">
-            <div class="icon"><i class="bi bi-terminal icon"></i></div>
-            <h5>Full Stack Development</h5>
-            <p class="lead-muted">Responsive frontends, solid API layers and robust integrations.</p>
+            <div class="icon"><i class="bi bi-robot"></i></div>
+            <h5>AI & Innovation</h5>
+            <p class="lead-muted">Creating advanced RAG pipeline</p>
           </div>
         </div>
 
@@ -1195,12 +1206,14 @@
           </div>
           <div class="timeline-right">
             <div class="role">Technical Lead</div>
-            <div class="desc">Architect and lead the design of full-stack web and AI platforms, with a strong focus on
-              scalable architectures, secure integrations and modern RAG-based applications. Lead infrastructure and
-              DevOps improvements on AWS with CI/CD, static code analysis and high-volume data backends using MongoDB.
-              Provide hands-on technical leadership across infrastructure, DevOps and frontend modernization, while
-              mentoring engineers, driving cross-team collaboration and elevating engineering standards through best
-              practices and knowledge sharing.</div>
+            <div class="desc">Strategic Technical Lead driving architectural excellence and AI innovation within a Global Business Unit. Act as the primary technical authority for toolchain transformation, bridging the gap between high-level architectural design and team execution.
+<br><b>Architectural Leadership:</b> Collaborate with Release Train Architects to design and document 20+ complex backend systems using PlantUML. Spearheading the "One-Database-One-Tool-Chain" initiative for organizational standardization.
+<br><b>System Scalability & Optimization:</b> Architected a highly scalable MongoDB Sharded Cluster on AWS to handle 1M+ daily records; engineered a Python-based Jira Data Processing library utilizing multi-threading and batch processing to reduce latency by 70%.
+<br><b>AI & Innovation:</b> Tool Owner for an AI-powered application, implementing an advanced RAG (Retrieval-Augmented Generation) pipeline. Currently collaborating with Global AI teams to develop a Model Context Protocol (MCP) for centralized AI assistants.
+<br><b>Technical Force Multiplier:</b> Nominated as "Expert" for Application Tools Development. Educated cross-functional teams of 50–3000 members through Tech Talks on topics like ‘Smarter Data Processing’, ‘Database Scaling’.
+<br><b>Quality Engineering:</b> Developed automated GitHub extraction scripts for Global Quality teams.
+<br><b>Technical Infrastructure & DevOps:</b> Optimized cloud infrastructure on AWS EC2 along with GPU configuration. Designed and deployed CI/CD pipelines in Jenkins with advanced static code analysis (SonarQube, Pylint).
+<br><b>Leadership & Mentorship:</b> Mentored and onboarded junior engineers. Conducted technical knowledge sessions and product demos at company-wide engineering events. Awarded for engineering excellence and technical leadership contributions.</div>
           </div>
         </div>
 
@@ -1211,11 +1224,13 @@
           </div>
           <div class="timeline-right">
             <div class="role">Technical Specialist</div>
-            <div class="desc">Owned the end-to-end engineering toolchain by writing high-quality code, performing
-              rigorous code reviews and enforcing consistent implementation standards across teams. Took responsibility
-              for core tools and services across infrastructure, DevOps and frontend modernization, while closely
-              collaborating with cross-functional engineering and management teams to deliver reliable, secure and
-              high-performing solutions.
+            <div class="desc">Lead Technical Specialist responsible for the end-to-end ownership and modernization of organization-wide enterprise applications.
+<br>
+<b>Product Ownership:</b> Managed the full SDLC for two critical internal tools, facilitating stakeholder requirements, sprint planning, and successful on-time delivery.
+<br>
+<b>UI/UX Modernization:</b> Led the complete UI revamp of legacy systems using modern frontend stacks, resulting in significant improvements in load times, system stability, and user satisfaction.
+<br>
+<b>Stakeholder Alignment:</b> Acted as the technical bridge for global stakeholders, translating complex business needs into actionable technical roadmaps and implementation plans.
             </div>
           </div>
 
