--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="hero-center">
       <div class="hero-panel fade-scale">
         <div class="hero-name">Sunil Kumar P M</div>
-        <div class="hero-title">Technical Lead • Architect</div>
+        <div class="hero-title">Technical Lead • Architect • AI Full Stack</div>
         <div class="mt-3 lead-muted" style="color:#dbefff">I design and deliver high-performance web platforms, lead
           engineering teams and implement secure scalable systems.</div>
       </div>
@@ -56,8 +56,9 @@
         <div class="about-pic shadow-sm"><img src="./img/sunil-profile-pic.jpg" alt="Profile">
         </div>
         <div class="about-text">
-          <p class="lead-muted" style="text-align: left;">I am a <b>Technical Lead</b> and <b>Architect</b> with over
-            <b>9</b> years of experience building high-stakes software across diverse industries—from Cybersecurity and
+          <p class="lead-muted" style="text-align: left;">I am an <b>AI-Powered Technical Lead</b> and <b>Architect</b>
+            with over
+            <b>9</b> years of experience building high-stakes software across diverse industries—from Cybersecurity, Semiconductor and
             Scientific Simulations to my most recent 5-year tenure within a Tier-1 Automotive organization.
             I thrive at the intersection of complex system architecture and high-performance team leadership. My journey
             has evolved from mastering deep technical domains to spearheading organizational-wide digital
@@ -178,7 +179,13 @@
 
     // dynamic skills
     const skill_array = [
-      { name: 'RAG', value: 85 },
+      { name: 'Retrieval Augmented Generation (RAG)', value: 85 },
+      { name: 'Agentic AI', value: 70 },
+      { name: 'Machine Learning', value: 50 },
+      { name: 'Prompt Engineering', value: 75 },
+      { name: 'Python', value: 90 },
+      { name: 'FastAPI', value: 90 },
+      { name: 'Mongo DB', value: 90 },
       { name: 'JavaScript', value: 90 },
       { name: 'Angular', value: 95 },
       { name: 'React', value: 92 },
@@ -187,12 +194,14 @@
       { name: 'Web Design', value: 95 },
       { name: 'D3.JS / Chart.JS / HighCharts', value: 90 },
       { name: 'Unit Test', value: 85 },
-      { name: 'Python', value: 90 },
-      { name: 'Mongo DB', value: 90 },
       { name: 'Django & DRF', value: 85 },
-      { name: 'Cloud & DevOps', value: 85 },
+      { name: 'AWS Cloud', value: 85 },
+      { name: 'Jenkins', value: 85 },
+      { name: 'Docker', value: 85 },
+      { name: 'SonarQube', value: 90 },
+      { name: 'Pylint', value: 90 },
       { name: 'Software Architecture', value: 80 },
-      { name: 'Machine Learning', value: 50 }
+      { name: 'Git', value: 95 }
     ];
 
     const skill_container = document.querySelector('.skills-grid');
@@ -259,10 +268,10 @@
               organization-wide enterprise applications.
               <br>
               <b>Product Ownership:</b> Managed the full SDLC for two critical internal tools, facilitating stakeholder
-              requirements, sprint planning, and successful on-time delivery.
+              requirements, sprint planning and successful on-time delivery.
               <br>
               <b>UI/UX Modernization:</b> Led the complete UI revamp of legacy systems using modern frontend stacks,
-              resulting in significant improvements in load times, system stability, and user satisfaction.
+              resulting in significant improvements in load times, system stability and user satisfaction.
               <br>
               <b>Stakeholder Alignment:</b> Acted as the technical bridge for global stakeholders, translating complex
               business needs into actionable technical roadmaps and implementation plans.`
